# vfrnav-public

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  vfrnav.spec  vfrnav.spec.in
acftperf/: Makefile.am  Makefile.in  acftperf.cc  acftperf.h  aircraftdb.h  archerII.h  arrow.h  grob115b.h  t67m.h
cfmu/: Makefile.am  Makefile.in  adr.cc  adr.hh  adraerodrome.cc  adraerodrome.hh  adrairspace.cc  adrairspace.hh  adraup.cc  adraup.hh  adraupparse.cc  adraupparse.hh  adrbdry.cc  adrbdry.hh  adrdb.cc  adrdb.hh  adrdbsync.cc  adrfplan.cc  adrfplan.hh  adrgraph.cc  adrgraph.hh  adrhibernate.cc  adrhibernate.hh  adrimport.cc  adrparse.cc  adrparse.hh  adrpoint.cc  adrpoint.hh  adrquery.cc  adrrestriction.cc  adrrestriction.hh  adrrestriction1.cc  adrrestriction2.cc  adrroute.cc  adrroute.hh  adrtimetable.cc  adrtimetable.hh  adrunit.cc  adrunit.hh  arsockserver.cc  (+35 more)
cfmu/html/: Makefile.am  Makefile.in  autoroute.html  autoroute.js
cfmu/php/: Makefile.am  Makefile.in  auth.php  autoroute.js  index.php  io.php  login.php  logout.php
cfmu/systemd/: Makefile.am  Makefile.in  cfmuautoroute  cfmuautoroute@.service  cfmuautoroute@.socket  cfmuvalidate  cfmuvalidate.service  cfmuvalidate.socket  cfmuws  cfmuws.service  cfmuwsusers.json
cfmu/ui/: Makefile.am  Makefile.in  cfmuvalidate.glade  cfmuvalidate.gladep  cfmuvalidate.ui
cfmu/webext/: Makefile.am  Makefile.in  cfmu-web-extension-main.c  cfmu-web-extension-names.h  cfmu-web-extension-proxy.c  cfmu-web-extension-proxy.h  cfmu-web-extension.c  cfmu-web-extension.h  cfmuvalidatewidget.cc  cfmuvalidatewidget.hh  interface.xml
data/: Makefile.am  Makefile.in  acftperf.desktop  flightdeck.desktop  vfrairporteditor.desktop  vfrairspaceeditor.desktop  vfrnav.desktop  vfrnavaideditor.desktop  vfrtrackeditor.desktop  vfrwaypointeditor.desktop  wetterdl.desktop
data/navlogtemplates/: navlog.ods  navlog.xml  vfrnav.xcd
data/selinux/: vfrnav.fc  vfrnav.te
dbeditor/: Makefile.am  Makefile.in  airporteditor.cc  airspaceeditor.cc  airwayeditor.cc  dbeditor.cc  dbeditor.h  navaideditor.cc  trackeditor.cc  waypointeditor.cc
debian/: Makefile.am  Makefile.in  changelog  control  copyright  menu  rules  vfrnav-utils.install  vfrnav.install  vfrnav.links  watch
doc/: Makefile.am  Makefile.in  barycentric1.fig  barycentric2.fig  contour1.fig  contour110.fig  contour111.fig  contour2.fig  contour3.fig  flightdeck.tex  hamprop.cc  hamproptbl.m  hartzellf7666a2af.m  lininterp.fig  p28rperf.m  pbxif.pdfsrc  propeller.h  vertex.fig  wptseq.fig
flightdeck/: Makefile.am  Makefile.in  ahrs.cc  ahrs.h  altdlg.cc  altinst.cc  coorddlg.cc  docpage.cc  flightdeck.cc  flightdeckrc.rc  flightdeckwindow.cc  flightdeckwindow.h  fplatmodlg.cc  fplautoroutedlg.cc  fpldirpage.cc  fplgpsimppage.cc  fplpage.cc  fplverifdlg.cc  ftdieeprog.cc  grib2page.cc  gyroinst.cc  hsidlg.cc  keyboarddlg.cc  logpage.cc  mapdlg.cc  maps.cc  maptile.cc  navarea.cc  navinfoarea.cc  nwxchartdlg.cc  perfpage.cc  routeprofile.cc  sensadsb.cc  sensadsb.h  sensattiio.cc  sensattiio.h  sensattitude.cc  sensattitude.h  sensattpsmove.cc  sensattpsmove.h  (+51 more)
flightdeck/configs/: Makefile.am  Makefile.in  hbdhg.cfg  hbdhg.xml  hbpbx.cfg  hbpbx.xml  hbpho.cfg  hbpho.xml  hbtda.cfg  hbtda.xml  hbtdb.cfg  hbtdb.xml  hbtdc.cfg  hbtdc.xml  hbtdd.cfg  hbtdd.xml  sim.cfg
flightdeck/ui/: Makefile.am  Makefile.in  flightdeck.css  flightdeck.glade  flightdeck.gladep  flightdeck.ui
flightdeck/win/: sensorspk.cc
include/: sysdeps.h  sysdepsgui.h
kingsim/: Makefile.am  Makefile.in  kingsim.cc  simulator.cc  simulator.h
m4/: ChangeLog
po/: ChangeLog  Makevars
scripts/: convertdafif.sh  convertgtopo.sh  convertvmap.sh  copyrunwaydata.sql  copytaxiwaydata.sql  creatertreeairports.sql  creatertreeairspaces.sql  creatertreeairways.sql  creatertreemapel.sql  duplicateairport.sql  fetchgfs.pl  imgcompr.php  mapelementsreorder.sql  runwaydisplacement.sql  unwrapnelon.sql  wetterdl.py
src/: Makefile.am  Makefile.in  Navigate.cc  Navigate.h  RouteEditUi.cc  RouteEditUi.h  SunriseSunset.cc  SunriseSunset.h  adds.cc  adds.h  aircraft.cc  aircraft.h  airdata.cc  airdata.h  airdataconst.cc  alignedalloc.h  awygraph.cc  baro.cc  baro.h  barostd.cc  bitmapmaps.cc  bitmapmaps.h  dbobj.cc  dbobj.h  dbobjarpt.cc  dbobjaspc.cc  dbobjawy.cc  dbobjlbl.cc  dbobjmapel.cc  dbobjnav.cc  dbobjtopo.cc  dbobjtrk.cc  dbobjwatel.cc  dbobjwpt.cc  dbser.cc  dbser.h  engine.cc  engine.h  engine1.cc  engine2.cc  (+63 more)
ui/: Makefile.am  Makefile.in  acftperformance.glade  acftperformance.gladep  acftperformance.ui  dbeditor.glade  dbeditor.gladep  dbeditor.ui  navigate.glade  navigate.gladep  navigate.ui  prefs.glade  prefs.gladep  prefs.ui  routeedit.glade  routeedit.gladep  routeedit.ui
utils/: Makefile.am  Makefile.in  adsbdecode.cc  airwaydump.cc  aixmimport.cc  camelcase.cc  csv.cc  dafif.cc  eadimport.cc  fasimport.cc  fplan.cc  grib2dump.cc  grib2fcst.cc  gshhs.cc  navdbimport.cc  openair.cc  opsperf.cc  optimizelabelplacement.cc  pdfmanip.cc  rebuildspatialindex.cc  settopo30.cc  srtm30db.cc  srtmwatermask.cc  topo30bin.cc  topo30zerotiles.cc  ukpostcodeimport.cc  updategndelev.cc  vfrnavdb2xml.cc  vfrnavfixdb.cc  vfrnavxml2db.cc  vmap.cc  windcalc.cc  wmmconv.cc  wmmtest.cc  xmlformat.cc  xplane.cc  xplaneexport.cc
utils/data/: Makefile.am  Makefile.in
windows/: mingw-vfrnav.spec.in  vfrnav.nsis  vfrnav_aviation.nsis  vfrnav_terrain.nsis
